# NMO_Solver

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.py  urls.txt
nmo_solver/: __init__.py  driver.py  main.py  parser.py
nmo_solver/configs/: __init__.py  config.py  config_init.py  user_config.py.example
nmo_solver/models/: __init__.py  question.py
nmo_solver/parsers/: __init__.py  answer_parser.py  web_parser.py
nmo_solver/utils/: __init__.py  helpers.py
