[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmo_solver"
version = "1.0.0"
description = "Automated solver for NMO tests on Rosminzdrav portal"
readme = "README.md"
authors = [
    {name = "Ivan Bashkatov - CpyBAgy", email = "ibaskatov9@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
requires-python = ">=3.7"
dependencies = [
    "selenium>=4.10.0",
    "webdriver-manager>=4.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
nmo_solver = "nmo_solver.main:main"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100